# pacha

./: .gitignore  .pacha.env.example  Dockerfile  README.md  app.yaml  compose.yaml  compose.yml  notes.txt  otel-collector-config.yaml  otel-compose.yaml  pyproject.toml  requirements.txt
api-proxy/: docker-compose.yaml  nginx.conf
ddn_project/: .gitattributes  docker-compose.hasura.yaml  otel-collector-config.yaml  supergraph.yaml
ddn_project/.hasura/: context.yaml
ddn_project/default/: .env.default
ddn_project/default/metadata/: Castmember.hml  Cat.hml  Catalog.hml  CmInfo.hml  Country.hml  FranchiseUnit.hml  Lang.hml  Loc.hml  Movie.hml  MovieCat.hml  MovieCm.hml  MovieEmbeddings.hml  MovieList.hml  Muni.hml  NicerButSlowerFilmList.hml  Patron.hml  PatronList.hml  Paymant.hml  PaymentP202201.hml  PaymentP202202.hml  PaymentP202203.hml  PaymentP202204.hml  PaymentP202205.hml  PaymentP202206.hml  PaymentP202207.hml  RentalByCategory.hml  SalesByCat.hml  SalesByStore.hml  SpatialRefSys.hml  Team.hml  TeamList.hml  TopologyLayer.hml  TopologyTopology.hml  Trans.hml  pg-types.hml  pg.hml
ddn_project/engine/: .env.engine  auth_config.json  metadata.json  open_dd.json
ddn_project/supergraph_globals/: compatibility-config.hml
docs/: README.md  docusaurus.config.ts  package-lock.json
docs/docs/: introduction.md
docs/docs/getting-started/: index.md
docs/docs/guides/: build-data-connector.md  groundedness.md  index.md
docs/docs/reference/: index.md
docs/src/pages/: index.tsx
eval/: README.md  run_eval.py
eval/runs/basic_pacha_on_spagila/: README.md
eval/runs/basic_pacha_on_spagila_with_openai/: README.md
eval/runs/initial_launch_eval_on_spagila/: README.md
eval/runs/pacha_with_ddn/: README.md
examples/: chat.py  chat_with_tool.py  chat_with_tool_anthropic.py  chat_with_tool_openai.py
examples/chat_server/: README.md  chat.py  chat_json.py  db.py  fastapi_server.py  pacha_chat.py  request.json  response_examples.txt  server.py  threads.py  ws.py
examples/utils/: cli.py  io.py
frontend/: .prettierrc  bun.lockb  index.html  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  ChatAppShell.tsx  ChatRouter.tsx  main.tsx
new_code/playground/: .gitignore  README.md  pyproject.toml
new_code/playground/scripts/: websocket_test_client.py
new_code/playground/src/promptql_playground/: artifacts.py  config.py  protocol.py  run.py  thread.py
new_code/promptql/: pyproject.toml  test.py
new_code/promptql/src/promptql/: __init__.py  artifact.py  artifacts.py  client.py  confirmation.py  error.py  llm.py  logging.py  protocol.py  sql.py  system_prompt.py  tool.py
new_code/promptql/src/promptql/ai_primitives/: classify.py  summarize.py
new_code/promptql/src/promptql/llms/: anthropic.py  openai.py
new_code/promptql/src/promptql/llms/llama/: ollama.py  replicate.py  together.py
new_code/promptql/src/promptql/sql/: __init__.py  catalog.py  ddn.py  engine.py
new_code/promptql_cloud/: pyproject.toml
new_code/promptql_playground/: pyproject.toml  test_websocket.py
pacha/: error.py
pacha/data_engine/: __init__.py  artifacts.py  catalog.py  context.py  data_engine.py  ddn.py  postgres.py  python_executor.py  user_confirmations.py
pacha/query_planner/: __init__.py  data_context.py  input.py  instructions.py  python_executor.py  query_planner.py
pacha/sdk/: chat.py  llm.py  tool.py
pacha/utils/: chat.py  logging.py  tool.py
scripts/: build_frontend.py  ddn_setup.py
(+463 files in other folders)
