[tool.poetry]
name = "promptql"
version = "0.1.0"
description = "Client for Hasura PromptQL"
authors = []
packages = [
    { include = "promptql", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.9.2"
websockets = "^13.1"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
